Reorganisation + beginning intro

--- a/Poissons.bib
+++ b/Poissons.bib
@@ -90,10 +90,6 @@
   primaryclass = {math},
   publisher = {{arXiv}},
   doi = {10.48550/arXiv.2207.08543},
-  abstract = {We prove that the formula for the diagonal approximation \$\textbackslash Delta\_\{K\}\$ on J. Stasheff's \$n\$-dimensional associahedron \$K\_\{n+2\}\$ derived by the current authors in 2004 agrees with the "magical formula" for the diagonal approximation \$\textbackslash Delta\_\{K\}\^\{\textbackslash prime\}\$ first derived by Markl and Shnider in 2006 and more recently by Masuda, Thomas, Tonks, and Vallette in 2021.},
-  archiveprefix = {arXiv},
-  keywords = {Mathematics - Algebraic Topology,Mathematics - Combinatorics,Primary 55P48; 55P99; Secondary 52B05; 52B11},
-  file = {/Users/mac/Documents/Bibliothèque/Recherche/Saneblidze_Umble_2022_Comparing Diagonals on the Associahedra.pdf;/Users/mac/Zotero/storage/HV684S8W/2207.html}
 }
 
 @article{SaneblidzeUmble04,
@@ -134,8 +130,27 @@
   pages = {108494},
   issn = {0001-8708},
   doi = {10.1016/j.aim.2022.108494},
-  abstract = {The primary goal of this article is to set up a general theory of coherent cellular approximations of the diagonal for families of polytopes by developing the method introduced by N. Masuda, A. Tonks, H. Thomas and B. Vallette. We apply this theory to the study of the operahedra, a family of polytopes ranging from the associahedra to the permutahedra, and which encodes homotopy operads. After defining Loday realizations of the operahedra, we make a coherent choice of cellular approximations of the diagonal, which leads to a compatible topological cellular operad structure on them. This gives a model for topological and algebraic homotopy operads and an explicit functorial formula for their tensor product.},
-  langid = {english},
-  keywords = {Approximation of the diagonal,Fiber polytopes,Generalized permutahedra,Hyperplane arrangements,Operads,Polytopes},
-  file = {/Users/mac/Zotero/storage/RGEQDUXW/S0001870822003115.html}
+}
+
+@article{masudaDiagonalAssociahedra2021,
+  title = {The Diagonal of the Associahedra},
+  author = {Masuda, Naruki and Thomas, Hugh and Tonks, Andy and Vallette, Bruno},
+  year = {2021},
+  journal = {Journal de l'\'Ecole polytechnique \textemdash{} Math\'ematiques},
+  volume = {8},
+  pages = {121--146},
+  doi = {10.5802/jep.142},
+}
+
+@article{fultonIntersectionTheoryToric1997a,
+  title = {Intersection Theory on Toric Varieties},
+  author = {Fulton, William and Sturmfels, Bernd},
+  year = {1997},
+  month = mar,
+  journal = {Topology},
+  volume = {36},
+  number = {2},
+  pages = {335--353},
+  issn = {0040-9383},
+  doi = {10.1016/0040-9383(96)00016-X},
 }
