--- a/sec/introduction.tex
+++ b/sec/introduction.tex
@@ -3,12 +3,21 @@
 \section*{Introduction} 
 \label{s:introduction}
 
-This formula has many possible applications in algebraic topology: 1) iterated cobar construction 2) twisted tensor products 3) Fulton--Sturmfels formula for Losev--Manin spaces (compute explicitly the ring struture on the operational Chow ring -over $\Z$?)
+The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
+Such diagonals, and particularly coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties [REF]; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of permutahedral sets (twisted tensor products?) [Saneblidze]; and they are needed to pursue the work of Baues in order to define explicit combinatorial models for iterated loop spaces [REF]. 
+\Guillaume{Th\'eorie des matro\"ides?}
+Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $A_\infty$-algebras and $A_\infty$-morphisms [LAMAz]
+
+The first occurence of a cellular approximation in the literature is in the work of S. Sanebdlize and R. Umble. 
+They use it for permutahedral sets...
+
 
 %\subsection{Conventions}
 %We use the notations of \cite{LodayVallette12} for operads.
 
 \Guillaume{Please make a new line for each sentence as to facilitate comparison between versions in GitHub}
+
+\Guillaume{Would it be possible to avoid bold letters, use "slash emph\{\}", and also reduce to the maximum possible the use of indices; as soon as the context is clear, drop any extra index}
 
 
 
