--- a/sec/preliminaries.tex
+++ b/sec/preliminaries.tex
@@ -3,6 +3,23 @@
 \section{Preliminaries}
 \label{s:prelim}
 
+The usual \emph{thin diagonal} of a topological space $X$ is the map $\Delta : X \to X \times X$ defined by $\Delta(x):=(x,x)$ for all $x \in X$.
+
+\begin{definition}
+    A \emph{cellular diagonal} of a polytope $P$ is a continuous map $P \to P \times P$ such that
+    \begin{enumerate}
+        \item its image is a union of $\dim P$-faces of $P\times P$ (i.e. it is \emph{cellular}),
+        \item it agrees with the thin diagonal on the vertices of $P$, and
+        \item it is homotopic to the thin diagonal, relative to the image of the vertices. 
+    \end{enumerate}
+\end{definition}
+
+A powerful geometric technique to define cellular diagonals on polytopes first appeared in \cite{fultonIntersectionTheoryToric1997a}, was presented in \cite{masudaDiagonalAssociahedra2021}, and was fully developed in \cite{LA21}.
+\Guillaume{PLUS!...}
+
+ 
+
+
 \subsection{Original description of the diagonal}
 
 Let us first set up some notations that will be of use throughout the paper. 
